lỗi đẩyt lên hết

--- a/WebsiteDental/Views/Doctors/Index.cshtml
+++ b/WebsiteDental/Views/Doctors/Index.cshtml
@@ -53,6 +53,29 @@
                 </div>
                 <button class="btn btn-primary w-100 btn-sm">Áp dụng</button>
             </div>
+
+            <!-- Thêm phần quảng cáo vào sau các phần đã có -->
+            <div class="department-sidebar advertisement-sidebar">
+                <h4><i class="fas fa-bullhorn me-2"></i>Thông tin nổi bật</h4>
+                <div class="sidebar-ad">
+                    <div class="ad-banner">
+                        <img src="https://i.pinimg.com/736x/a0/9d/ee/a09dee088f0d7e976e32d64fddfd97c0.jpg" alt="Quảng cáo dịch vụ y tế" class="img-fluid rounded mb-3">
+                        <h5 class="ad-title">Gói khám sức khỏe toàn diện</h5>
+                        <p class="ad-description">Giảm 30% cho đăng ký trực tuyến từ ngày 10-25/04</p>
+                        <a href="#" class="btn btn-success btn-sm w-100">Đăng ký ngay</a>
+                    </div>
+                </div>
+
+                <div class="sidebar-ad mt-4">
+                    <div class="ad-special">
+                        <div class="ad-special-content">
+                            <h5><i class="fas fa-stethoscope"></i> Dịch vụ tư vấn trực tuyến</h5>
+                            <p>Tư vấn với bác sĩ chuyên khoa chỉ từ 200.000đ</p>
+                            <a href="#" class="btn btn-outline-primary btn-sm">Tìm hiểu thêm</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Doctor List -->
